[project]
name = "repo_viz"
version = "0.1.0"
description = "Automated exploratory data analysis for DagsHub repositories."
authors = [
    {name = "Zander Giuffrida", email = "zndr27@gmail.com"},
]
dependencies = [
    "dtale>=3.13.1",
    "sweetviz>=2.3.1",
    "natsort>=8.4.0",
    "plotly>=5.23.0",
    "dash>=2.17.1",
    "kaleido<=0.2.1",
    "ydata-profiling>=4.9.0",
    "dash-bootstrap-components>=1.3.1",
    "dash-mantine-components>=0.14.3",
    "dash-bootstrap-templates>=1.2.2",
    "dash-iconify>=0.1.2",
    "flask>=2.2.5",
    "pip>=24.2",
]
requires-python = ">=3.10,<=3.12.4"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
